--- a/app/src/main/res/layout/top_stories_recyclerview_item.xml
+++ b/app/src/main/res/layout/top_stories_recyclerview_item.xml
@@ -1,15 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dip">
+    android:padding="20dip"
+    android:id="@+id/top_stories_item_relativelayout">
+    <ImageView
+        android:layout_width="@dimen/widthImageRecycler"
+        android:layout_height="@dimen/heightImagerecycler"
+        android:id="@+id/top_stories_item_image"
+        android:layout_marginEnd="20dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/top_stories_item_image"
+        android:id="@+id/top_stories_item_section"
+        android:textStyle="bold"
+        android:textColor="#000"/>
 
     <TextView
         android:id="@+id/top_stories_item_title"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_toEndOf="@id/top_stories_item_image"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@id/top_stories_item_title"/>
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/top_stories_item_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:textColor="#000"/>
+
+</RelativeLayout>
