--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="row_padding_vertical">10dp</dimen>
+        <!-- ImageView -->
+        <dimen name="heightImagerecycler">75dp</dimen>
+        <dimen name="widthImageRecycler">75dp</dimen>
 </resources>
