--- a/app/src/main/res/layout/fragment_top_stories.xml
+++ b/app/src/main/res/layout/fragment_top_stories.xml
@@ -6,19 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.behague.benjamin.mynews.Controllers.Fragments.TopStoriesFragment"
     android:gravity="center"
-    android:orientation="vertical"
-    android:background="#EDD9CF">
-
-    <TextView
-        android:id="@+id/fragment_page_top_stories"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dip"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        android:textColor="#fff"
-        android:textAlignment="center"
-        android:text="TOP STORIES"/>
+    android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
