--- a/app/src/main/res/layout/top_stories_recyclerview_item.xml
+++ b/app/src/main/res/layout/top_stories_recyclerview_item.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="20dip"
+    android:padding="10dip"
     android:id="@+id/top_stories_item_relativelayout">
     <ImageView
         android:layout_width="@dimen/widthImageRecycler"
@@ -33,5 +33,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:textColor="#000"/>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"
+        android:layout_alignStart="@id/top_stories_item_title"
+        android:layout_below="@id/top_stories_item_image"
+        />
+
 
 </RelativeLayout>
