--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,10 +7,10 @@
     <color name="color_arrowActionBar">#FFF</color>
 
     <array name="colorPagesViewPager">
-        <item>#EDD9CF</item>
-        <item>#BED4D6</item>
-        <item>#ADCEB7</item>
-        <item>#F7CF8B</item>
-        <item>#FD96A2</item>
+        <item>#FFF</item>
+        <item>#FFF</item>
+        <item>#FFF</item>
+        <item>#FFF</item>
+        <item>#FFF</item>
     </array>
 </resources>
