--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -9,6 +9,12 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <include
+        layout="@layout/toolbar"
+        android:id= "@+id/toolbarSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_search"
         android:layout_width="match_parent"
