--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -65,6 +65,7 @@
         android:layout_alignStart="@id/linearLayout_Search"/>
 
     <Switch
+        android:id="@+id/switch_notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/line_separator"
