--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.behague.benjamin.mynews.Controllers.Activities.SearchResultsActivity"
+    tools:context="com.behague.benjamin.mynews.controllers.activities.SearchResultsActivity"
     android:gravity="center"
     android:orientation="vertical">
 
