--- a/app/src/main/res/layout/fragment_most_popular.xml
+++ b/app/src/main/res/layout/fragment_most_popular.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.behague.benjamin.mynews.Controllers.Fragments.MostPopularFragment"
+    tools:context="com.behague.benjamin.mynews.controllers.Fragments.MostPopularFragment"
     android:gravity="center"
     android:orientation="vertical"
     android:background="#FFF">
