--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -10,7 +10,8 @@
         android:layout_width="@dimen/widthImageRecycler"
         android:layout_height="@dimen/heightImagerecycler"
         android:id="@+id/top_stories_item_image"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginEnd="20dp"
+        android:contentDescription="@string/contentDescription_image"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,16 +32,19 @@
         android:id="@+id/top_stories_item_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/top_stories_item_section"
         android:layout_alignParentEnd="true"
+        android:gravity="end"
         android:textColor="#000"/>
 
     <View
+        android:id="@+id/separator"
         android:layout_width="wrap_content"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"
         android:layout_alignStart="@id/top_stories_item_title"
         android:layout_below="@id/top_stories_item_image"
+        android:layout_marginTop="5dp"
         />
-
 
 </RelativeLayout>
