--- a/app/src/main/res/layout/editbox_search.xml
+++ b/app/src/main/res/layout/editbox_search.xml
@@ -7,8 +7,8 @@
     android:id="@+id/activity_edit_box_sn"
     android:layout_marginStart="@dimen/margin_start_editText"
     android:layout_marginEnd="@dimen/margin_end_editText"
-    android:hint= "Search query term"
+    android:hint= "@string/term"
     android:layout_below="@id/toolbarSearch"
     android:layout_marginTop="10dp"
-    android:maxLines="1"
+    android:singleLine="true"
     />
